[gd_scene load_steps=2 format=3 uid="uid://57wxy4tr6peq"]

[ext_resource type="Script" uid="uid://c1sgyfqknkj8i" path="res://scripts/ysortHelper.gd" id="1_plg4x"]

[node name="ySortHelper" type="Area2D"]
script = ExtResource("1_plg4x")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
